<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:np="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="289.5dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginLeft="13.4dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/select"
            android:textColor="#33b5e5"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.4dp"
            android:background="#33b5e5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal" >

            <net.simonvt.numberpicker.NumberPicker
                android:id="@+id/hourPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@color/white"
                android:text="@string/character_colon"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <net.simonvt.numberpicker.NumberPicker
                android:id="@+id/minutePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.4dp"
            android:background="#d1d1d1" />

        <TextView
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/dialog_finish_btn_bg"
            android:gravity="center"
            android:text="@string/finish"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>